--- a/style.css
+++ b/style.css
@@ -429,7 +429,7 @@ body {
     height: 150px;
 }
 
-.popupcontent p {
+.mpopupcontent p {
     text-transform: uppercase;
     font-size: 40pt;
     font-weight: bold;
@@ -477,5 +477,5 @@ body {
     border-radius: 300px;
     height: 100px;
     width: 100px;
-
 }
+
